# claude-supervisor

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  config.example.toml  config.toml  docker-compose.yml  roadmap.md
.cargo/: config.toml
.github/hooks/: pre-commit
docker/: CLAUDE.md  claude-settings.json
docs/plans/: 2026-01-29-cli-interface.md  2026-01-29-git-worktree-isolation.md  2026-01-29-phase3-knowledge-layer.md  2026-01-29-policy-engine-and-process-control.md  2026-01-29-project-scaffold-and-dependencies.md  2026-01-30-implement-run-command.md  2026-01-30-multi-session-management.md  2026-01-30-phase4-conversation-awareness.md  2026-01-31-flexible-stream-parsing.md
src/: display.rs  lib.rs  main.rs
src/ai/: boss.rs  client.rs  context.rs  mod.rs  prompts.rs
src/audit/: error.rs  logger.rs  mod.rs  schema.rs  types.rs
src/cli/: events.rs  mod.rs  process.rs  stream.rs
src/commands/: install_hooks.rs  mod.rs
src/config/: claude_settings.rs  loader.rs  mod.rs  stop.rs  types.rs  worktree.rs
src/dashboard/: api.rs  error.rs  handlers.rs  mod.rs  server.rs  state.rs
src/hooks/: completion.rs  handler.rs  input.rs  iteration.rs  mod.rs  pre_tool_use.rs  stop.rs
src/integration/: bridge.rs  mod.rs
src/ipc/: client.rs  mod.rs  server.rs  types.rs
src/knowledge/: claude_md.rs  history.rs  memory.rs  mod.rs  (+1 more)
tests/: audit_integration.rs  dashboard_integration.rs  install_hooks_integration.rs  integration.rs  ipc_integration.rs  knowledge_integration.rs  multi_session_integration.rs  raw_mode_test.rs  run_command.rs  worktree_integration.rs
(+31 files in other folders)
