[package]
name = "claude-supervisor"
version = "0.1.0"
edition = "2021"
authors = ["NikkeTryHard"]
description = "Automated Claude Code with AI oversight"
license = "MIT"
repository = "https://github.com/NikkeTryHard/claude-supervisor"
readme = "README.md"
keywords = ["claude", "supervisor", "ai", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
futures-util = "0.3"
toml = "0.8"
dirs = "5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
